# evoker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
evoker/: __main__.py  cors.py  errors.py  options.py  predict.py  server.py  train.py
evoker/data/: prompts.txt
