[tool.poetry]
name = "evoker"
version = "0.1.0"
description = "A webserver for serving Renderflux's GPT-2 based generative art prompt autocomplete model"
authors = ["kajdev <zekewotring@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.6.0"
transformers = "^4.20.1"
datasets = "^2.3.2"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
